descriptioin section ready + z-index fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,14 @@
-/* div {
+div {
   border: 1px red solid;
 }
 section {
   border: 1px green solid;
-} */
+}
+
+.link {
+  color: #2f80ed;
+  text-decoration: none;
+}
 
 .page {
   min-width: 1100px;
@@ -27,7 +32,6 @@ section {
   position: relative;
 
   background-color: #f2f2f2;
-  z-index: -1;
 }
 
 .logo {
@@ -38,7 +42,7 @@ section {
 
 .logo_place_header {
   background-image: url('../images/logo_place_header.svg');
-  z-index: 1;
+  z-index: 3;
 
   position: absolute;
   left: 64px;
@@ -53,7 +57,7 @@ section {
 .header__title {
   width: 730px;
   margin-left: 64px;
-  z-index: 1;
+  z-index: 3;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -61,7 +65,7 @@ section {
 
 .header__subtitle {
   width: 388px;
-  z-index: 1;
+  z-index: 3;
 
   position: absolute;
   left: 64px;
@@ -77,6 +81,7 @@ section {
   position: absolute;
   right: 0;
   bottom: 0;
+  z-index: 2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -84,10 +89,61 @@ section {
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  z-index: -1;
   position: absolute;
   right: 0;
   top: 64px;
+  z-index: 1;
+}
+
+
+.description {
+  margin-top: 100px;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font: 18px;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.two-columns__paragraf {
+  margin-bottom: 30px;
+}
+.two-columns__paragraf:last-of-type {
+  margin-bottom: 0px;
+}
+.two-columns__span-accent {
+  font-weight: 600;
+}
+
+.digits {
+  margin-top: 100px;
+}
+
+.feynman {
+  margin-top: 100px;
+}
+
+.kaufman {
+  margin: 90px 0;
+}
+
+.footer {
+  margin: 60px 0 40px 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
